# gpu-compositing

./: README  README.md  gpucomp.h
composition/: Makefile  common.c  common.h  gpu_composition  main.c  rules.make
gpuvsink/: aclocal.m4  autogen.sh  configure  configure.ac  doconfigure.sh
gpuvsink/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gpuvsink/src/: Makefile.am  Makefile.in  gst_buffer_manager.c  gst_buffer_manager.h  gst_render_bridge.c  gst_render_bridge.h  gstsink_plugin.c  rules.make
linuxfboffscreen/: linuxfbofs.pro  main.cpp  qpluginbase.pri  qscreenlinuxfb_qws.cpp  qscreenlinuxfb_qws.h
targetfs/: init.sh
transBgSmpQtUI/: main.cpp  transBgSmpQtUI  transBgSmpQtUI.cpp  transBgSmpQtUI.h  transBgSmpQtUI.pro  transBgSmpQtUI.ui
